--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-grid": "^4.19.1",
+    "axios": "^0.21.4",
     "bulma": "^0.9.3",
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
