--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-grid": "^4.19.1",
     "axios": "^0.21.4",
+    "bignumber.js": "^9.0.1",
     "bulma": "^0.9.3",
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
