--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.21.4",
     "bignumber.js": "^9.0.1",
     "bulma": "^0.9.3",
+    "date-fns": "^2.25.0",
     "moment": "^2.29.1",
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
