--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bignumber.js": "^9.0.1",
     "bulma": "^0.9.3",
     "date-fns": "^2.25.0",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
     "moment": "^2.29.1",
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
