--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-imask": "^6.2.2",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
