--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "react-imask": "^6.2.2",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-number-format": "^4.7.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
