--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-toastify": "^8.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
