--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@mui/core": "^5.0.0-alpha.50",
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^4.0.1",
+    "@mui/x-data-grid-generator": "^5.1.0",
     "@mui/x-data-grid-pro": "^4.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
